--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_lints: ^3.0.0
   flutter_naver_map: ^1.3.0
   geolocator: ^13.0.2
+  http: ^1.3.0
   permission_handler: ^11.3.1
 
 dev_dependencies:
