--- a/.github/workflows/SUH-PROJECT-UTILITY-CICD.yaml
+++ b/.github/workflows/SUH-PROJECT-UTILITY-CICD.yaml
@@ -1,5 +1,4 @@
-name: ROMROM-FE-CICD
-
+name: ROM-ROM-FRONT-CICD  # 워크플로 이름
 
 on:
   push:
@@ -10,100 +9,106 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      # 1) 소스 코드 체크아웃
+      - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      # 2) Flutter 세팅 (stable 채널, 필요에 따라 채널 변경 가능)
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          channel: 'stable'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      # application-prod.yml 파일을 빌드 전에 생성
-      - name: Create application-prod.yml from secret
+      # 3) .env 파일 생성
+      - name: Create .env file from secret
         run: |
-          echo "${{ secrets.APPLICATION_PROD_YML }}" > ./src/main/resources/application-prod.yml
+          echo "${{ secrets.ENV }}" > .env
 
-      # prod 프로파일을 활성화하여 빌드
-      - name: Build with Gradle
-        run: ./gradlew clean build -x test -Dspring.profiles.active=prod
+      # 4) Flutter 의존성 설치
+      - name: Flutter Pub Get
+        run: flutter pub get
 
+      # 5) Flutter 웹 빌드
+      - name: Flutter Build Web
+        run: flutter build web
+
+      # 6) Docker Buildx 세팅
       - name: Docker setup
         uses: docker/setup-buildx-action@v3
 
+      # 7) DockerHub 로그인
       - name: Docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 8) Docker 이미지 빌드 및 푸시
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sejong-malsami-back-container:${{ github.ref_name }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/sejong-malsami-back-container:cache
+          # 예: main브랜치 -> rom-rom-front:main, test브랜치 -> rom-rom-front:test
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rom-rom-front:${{ github.ref_name }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/rom-rom-front:cache
           cache-to: type=inline
 
   deploy:
     needs: build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+
     steps:
+      # 1) SSH로 원격 배포
       - name: Deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          port: 2022
+          port: 22  # 서버 SSH 포트 (예: 22, 2022 등 서버 설정에 맞게 수정)
           script: |
+            # ---------- 공통 환경 변수 및 분기 설정 ----------
             set -e  # 에러 발생 시 스크립트 중단
-
-            echo "환경 변수 설정 중..."
-            export PATH=$PATH:/usr/local/bin
             export PW=${{ secrets.SERVER_PASSWORD }}
             BRANCH=${{ github.ref_name }}
-            PORT=8080
-            CONTAINER_NAME="sejong-malsami-back"
 
-            if [ "$BRANCH" == "main" ]; then
-              PORT=8087
-            elif [ "$BRANCH" == "test" ]; then
-              CONTAINER_NAME="sejong-malsami-back-test"
-              PORT=8088
+            # 브랜치에 따라 포트와 컨테이너 이름 분기
+            PORT=3006
+            CONTAINER_NAME="rom-rom-front"
+
+            if [ "$BRANCH" == "test" ]; then
+              PORT=3005
+              CONTAINER_NAME="rom-rom-front-test"
             fi
 
-            echo "브랜치: $BRANCH"
+            echo "-------------------------------------------"
+            echo "배포 브랜치: $BRANCH"
             echo "컨테이너 이름: $CONTAINER_NAME"
             echo "포트: $PORT"
+            echo "-------------------------------------------"
 
-            echo "도커 이미지 풀: ${{ secrets.DOCKERHUB_USERNAME }}/sejong-malsami-back-container:${BRANCH}"
-            echo $PW | sudo -S docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sejong-malsami-back-container:${BRANCH}
+            # ---------- 도커 이미지 Pull ----------
+            echo $PW | sudo -S docker pull ${{ secrets.DOCKERHUB_USERNAME }}/rom-rom-front:${BRANCH}
 
-            echo "컨테이너 $CONTAINER_NAME 존재 여부 확인 중..."
+            # ---------- 기존 컨테이너 종료/삭제 ----------
             if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^${CONTAINER_NAME}\$"; then
-              echo "컨테이너 $CONTAINER_NAME 이(가) 존재합니다. 중지 및 삭제 중..."
-              echo $PW | sudo -S docker rm -f $CONTAINER_NAME
-              echo "컨테이너 $CONTAINER_NAME 이(가) 삭제되었습니다."
+              echo "기존 컨테이너 ${CONTAINER_NAME} 중단 및 삭제"
+              echo $PW | sudo -S docker rm -f ${CONTAINER_NAME}
             else
-              echo "존재하는 컨테이너 $CONTAINER_NAME 이(가) 없습니다."
+              echo "기존 컨테이너 ${CONTAINER_NAME} 없음"
             fi
 
-            echo "새로운 컨테이너 $CONTAINER_NAME 실행 중..."
-            echo $PW | sudo -S docker run -d -p ${PORT}:8080 --name $CONTAINER_NAME \
-              --network sejong-malsami-network \
-              -v /var/run/docker.sock:/var/run/docker.sock \
-              -e TZ=Asia/Seoul \
-              -e "SPRING_PROFILES_ACTIVE=prod" \
-              -v /etc/localtime:/etc/localtime:ro \
-              -v /volume1/projects/sejong-malsami:/mnt/sejong-malsami \
-              ${{ secrets.DOCKERHUB_USERNAME }}/sejong-malsami-back-container:${BRANCH}
+            # ---------- 새 컨테이너 실행 ----------
+            echo "새 컨테이너 실행 -> 이름: ${CONTAINER_NAME}, 포트: ${PORT}"
+            echo $PW | sudo -S docker run -d \
+              -p ${PORT}:80 \  # Flutter 웹 Dockerfile에서 기본적으로 80 포트로 서빙 가정
+              --name ${CONTAINER_NAME} \
+              --restart unless-stopped \
+              ${{ secrets.DOCKERHUB_USERNAME }}/rom-rom-front:${BRANCH}
 
-            echo "배포가 성공적으로 완료되었습니다."
+            echo "배포 완료!"
