--- a/.github/workflows/SUH-PROJECT-UTILITY-CICD.yaml
+++ b/.github/workflows/SUH-PROJECT-UTILITY-CICD.yaml
@@ -2,12 +2,14 @@ name: ROMROM-FRONT-Firebase-Distribution
 
 on:
   push:
-    branches: [ "main", "test" ]
+    branches: ["main", "test"]
   workflow_dispatch:
 
 jobs:
-  build-and-distribute:
-    runs-on: macos-latest  # iOS 빌드는 macOS 필요!
+  # 안드로이드 빌드
+  build_android:
+    name: Build & Deploy Android
+    runs-on: ubuntu-latest
 
     steps:
       # (1) 코드 체크아웃
@@ -15,66 +17,81 @@ jobs:
         uses: actions/checkout@v3
 
       # (2) Flutter 설치
-      - name: Set up Flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
+          flutter-version: "3.27.3"
           channel: stable
 
       # (3) .env 생성
       - name: Create .env file from secret
         run: |
           echo "${{ secrets.ENV }}" > .env
+          export $(cat .env | xargs)
 
       # (4) 의존성 설치
-      - name: Flutter Pub Get
+      - name: Install dependencies
         run: flutter pub get
 
-      # (5) iOS 빌드 (ipa)
-      #     - 이 단계에서 코드사인 관련 세팅(인증서, 프로비저닝 프로필 등)을 추가 설정해야 합니다.
-      - name: Build iOS IPA
-        run: |
-          # 예: Release 모드로 iOS 빌드 (Flutter 3.7+ 버전에서 'flutter build ipa'가 정식 지원)
-          flutter build ipa --release
+      # (5) Android 빌드 (apk or appbundle)
+      - name: Build APK
+        run: flutter build apk --release
 
-      # (6) Android 빌드 (apk or appbundle)
-      #     - 앱 서명(keystore)이 필요한 경우, Secrets에서 가져와 설정해줘야 함
-      - name: Build Android APK
-        run: |
-          flutter build apk --release
+      - name: Upload artifact (APK)
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
 
       # (7) Firebase CLI 설치
       - name: Install Firebase CLI
-        run: |
-          npm install -g firebase-tools
+        run: curl -sL https://firebase.tools | bash
 
-      # (8) Firebase 인증 (Secrets에 보관한 토큰 사용)
-      - name: Firebase Auth
+      # (8) Firebase 이용해 안드로이드 배포
+      - name: Distribute Android to Firebase
         run: |
-          firebase logout || true
-          firebase login:ci --token "${{ secrets.FIREBASE_TOKEN }}"
-
-      # (9) Firebase App Distribution - iOS 배포
-      - name: Distribute iOS to Firebase
-        if: always()
-        run: |
-          # build/ios/ipa/Runner.ipa 위치를 Firebase에 업로드
-          # --app 은 Firebase 콘솔에서 iOS 앱 등록 시 발급되는 App ID (ex: 1:1234567890:ios:abcd1234...)
-          # --groups 에는 Firebase App Distribution에서 만든 테스터 그룹 이름
-          BRANCH=${{ github.ref_name }}
           firebase appdistribution:distribute \
-            build/ios/ipa/Runner.ipa \
+          build/app/outputs/flutter-apk/app-release.apk \
+          --app "${{ secrets.FIREBASE_ANDROID_APP_ID }}" \
+          --groups "testers" \
+          --release-notes "Android Build for ${{ github.ref_name }}" \
+          --token "${{ secrets.FIREBASE_TOKEN }}"
+
+  # IOS 빌드
+  build_ios:
+    name: Build & Deploy iOS
+    runs-on: macos-latest # iOS 빌드는 macOS에서 실행
+
+    steps:
+      # (1) 코드 체크아웃
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      # (2) Flutter 설치
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.27.3"
+          channel: stable
+
+      # (3) 의존성 설치
+      - name: Install dependencies
+        run: flutter pub get
+
+      # (4) IOS 빌드
+      - name: Build iOS
+        run: flutter build ipa --release
+
+      # (5) Firebase CLI 설치
+      - name: Install Firebase CLI
+        run: curl -sL https://firebase.tools | bash
+
+      # (6) Firebase에 IOS 배포
+      - name: Distribute iOS to Firebase
+        run: |
+          firebase appdistribution:distribute \
+            build/ios/archive/Runner.ipa \
             --app "${{ secrets.FIREBASE_IOS_APP_ID }}" \
             --groups "testers" \
-            --release-notes "iOS Build for $BRANCH"
-
-      # (10) Firebase App Distribution - Android 배포
-      - name: Distribute Android to Firebase
-        if: always()
-        run: |
-          # build/app/outputs/flutter-apk/app-release.apk (기본 경로)
-          BRANCH=${{ github.ref_name }}
-          firebase appdistribution:distribute \
-            build/app/outputs/flutter-apk/app-release.apk \
-            --app "${{ secrets.FIREBASE_ANDROID_APP_ID }}" \
-            --groups "testers" \
-            --release-notes "Android Build for $BRANCH"
+            --release-notes "iOS Build for ${{ github.ref_name }}" \
+            --token "${{ secrets.FIREBASE_TOKEN }}"
