--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   geolocator: ^13.0.2
   http: ^1.3.0
   permission_handler: ^11.3.1
+  firebase_core: ^3.11.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
