--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^3.11.0
   kakao_flutter_sdk: ^1.9.6
   logging: ^1.3.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
