--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
               />
             <meta-data
               android:name="com.naver.maps.map.CLIENT_ID"
-              android:value="vx91soq32x" />
+              android:value="${NAVER_CLIENT_ID}" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
