--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,11 @@ dependencies:
   geolocator: ^13.0.2
   http: ^1.3.0
   permission_handler: ^11.3.1
-  firebase_core: ^3.11.0
+  # firebase_core: ^3.11.0
   kakao_flutter_sdk: ^1.9.6
   logging: ^1.3.0
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.2.4
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
