카카오 소셜 로그인 기능 추가 : refactor : .gitignore 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/3

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ app.*.map.json
 
 *.env
 lib/firebase_options.dart
+/android/Google-services.json
+ios/Flutter/Secrets.xcconfig
+ios/Runner/GoogleService-Info.plist
