--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   logging: ^1.3.0
   flutter_secure_storage: ^9.2.4
   google_sign_in: ^6.2.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
