--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -13,12 +13,21 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Get Full Commit History
+          fetch-depth: 0
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-pub-
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'  # Flutter 버전 맞춰줘
+          flutter-version: '3.24.3'
+          cache: true
+          cache-key: flutter-${{ runner.os }}-3.24.3
 
       - name: Install Dependencies
         run: flutter pub get
@@ -48,14 +57,14 @@ jobs:
         run: |
           cd android
           fastlane build
-          ls -la ./app/build/outputs/apk/release/ # 디버깅용: 파일 확인
+          ls -la ./app/build/outputs/apk/release/ # 디버깅용
 
       - name: Upload APK as Artifact
-        uses: actions/upload-artifact@v4  # v3 대신 v4로 업그레이드
+        uses: actions/upload-artifact@v4
         with:
           name: romrom-apk
           path: ./android/app/build/outputs/apk/release/romrom-${{ env.SHORT_COMMIT_HASH }}.apk
-          retention-days: 1  # 아티팩트 보관 기간
+          retention-days: 1
 
   deploy-android:
     name: Deploy Android APK
@@ -68,7 +77,7 @@ jobs:
           fetch-depth: 0
 
       - name: Download APK Artifact
-        uses: actions/download-artifact@v4  # v4로 업그레이드
+        uses: actions/download-artifact@v4
         with:
           name: romrom-apk
           path: ./apk
@@ -89,7 +98,6 @@ jobs:
 
       - name: Update romrom-cicd-history.json
         run: |
-          # 서울 시간대 설정
           export TZ='Asia/Seoul'
           BUILD_DATE=$(date +"%Y-%m-%d %H:%M")
           APK_NAME="romrom-${{ env.SHORT_COMMIT_HASH }}.apk"
@@ -97,7 +105,6 @@ jobs:
           COMMIT_LINK="https://github.com/TEAM-ROMROM/RomRom-FE/commit/${{ github.sha }}"
           FULL_COMMIT_HASH="${{ github.sha }}"
 
-          # 새로운 빌드 정보 JSON 객체 생성
           NEW_BUILD_INFO=$(jq -n \
             --arg apk_name "$APK_NAME" \
             --arg file_size "$FILE_SIZE" \
@@ -106,11 +113,8 @@ jobs:
             --arg full_commit_hash "$FULL_COMMIT_HASH" \
             '{apk_name: $apk_name, file_size: $file_size, build_date: $build_date, commit_link: $commit_link, full_commit_hash: $full_commit_hash}')
 
-          # 서버에서 romrom-cicd-history.json 가져오기, 없으면 초기화
           curl -s --fail ftp://${{ secrets.WEB_FTP_SERVER }}/romrom/downloads/romrom-cicd-history.json --user ${{ secrets.WEB_FTP_USERNAME }}:${{ secrets.WEB_FTP_PASSWORD }} > romrom-cicd-history.json || echo '{"files": []}' > romrom-cicd-history.json
 
-          # 기존 JSON에 새로운 빌드 정보 추가
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
 
-          # 업데이트된 JSON을 서버에 업로드
           curl -T updated.json ftp://${{ secrets.WEB_FTP_SERVER }}/romrom/downloads/romrom-cicd-history.json --user ${{ secrets.WEB_FTP_USERNAME }}:${{ secrets.WEB_FTP_PASSWORD }}
