--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,17 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+// 파일 상단 또는 defaultConfig 전에 .env 파일 읽기
+def dotenv = new Properties()
+def envFile = rootProject.file("../.env")
+if (envFile.exists()) {
+    envFile.withInputStream { stream ->
+        dotenv.load(stream)
+    }
+} else {
+    throw new FileNotFoundException("Could not find.env file at: ${envFile.path}")
+}
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -49,6 +60,10 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders += [
+            NMF_CLIENT_ID      : dotenv['NMF_CLIENT_ID'] ?: "",
+            KAKAO_NATIVE_APP_KEY : dotenv['KAKAO_NATIVE_APP_KEY'] ?: ""
+        ]
     }
 
     buildTypes {
