--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 위치 권한 요청 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.LOCATION_ALWAYS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> 
+
+    <!-- 인터넷 권한 요청(카카오) -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:label="romrom_fe"
         android:name="${applicationName}"
@@ -21,7 +29,7 @@
               />
             <meta-data
               android:name="com.naver.maps.map.CLIENT_ID"
-              android:value="${NAVER_CLIENT_ID}" />
+              android:value="${NMF_CLIENT_ID}" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -38,6 +46,7 @@
 
                 <!-- 카카오 로그인 Redirect URI -->
                 <data android:scheme="kakao${KAKAO_NATIVE_APP_KEY}" android:host="oauth"/>
+                <!-- <data android:scheme="kakaokakao31344bf73c8ca4cc1d17bbd793758b97" android:host="oauth"/> -->
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
@@ -46,13 +55,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-    <!-- 위치 권한 요청 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.LOCATION_ALWAYS"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> 
-
-    <!-- 인터넷 권한 요청(카카오) -->
-    <uses-permission android:name="android.permission.INTERNET" />
 
     </application>
     <!-- Required to query activities that can process text, see:
