--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
