--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <!-- 인터넷 권한 요청(카카오) -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 알림 권한 요청(네이버 지도 관련) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:label="romrom_fe"
         android:name="${applicationName}"
