안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  keystore 추가
https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,12 +69,17 @@ android {
             KAKAO_NATIVE_APP_KEY : dotenv['KAKAO_NATIVE_APP_KEY'] ?: ""
         ]
     }
-
+     signingConfigs {
+        release {
+            storeFile file(dotenv["KEYSTORE_FILE"] ?: "keystore/key.jks")
+            storePassword dotenv["KEYSTORE_PASSWORD"]
+            keyAlias dotenv["KEY_ALIAS"]
+            keyPassword dotenv["KEY_PASSWORD"]
+        }
+    }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
