--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/keystore/key.jks
 
 # 환경변수 ignore
 *.env
