--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -22,6 +22,9 @@ jobs:
           key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-flutter-pub-
 
+      - name: Clear Gradle Cache #Gradle 캐시 무효화
+        run: rm -rf ~/.gradle/caches
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -56,7 +59,7 @@ jobs:
       - name: Build APK with Fastlane
         run: |
           cd android
-          fastlane build --verbose
+          fastlane build --verbose --stacktrace
           ls -la ./app/build/outputs/apk/release/ # 디버깅용
 
       - name: Upload APK as Artifact
