안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  stacktrace 삭제
https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Build APK with Fastlane
         run: |
           cd android
-          fastlane build --verbose --stacktrace
+          fastlane build --verbose
           ls -la ./app/build/outputs/apk/release/ # 디버깅용
 
       - name: Upload APK as Artifact
