안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  gradle 버전 명시
https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -25,6 +25,11 @@ jobs:
       - name: Clear Gradle Cache #Gradle 캐시 무효화
         run: rm -rf ~/.gradle/caches
 
+      - name: Setup Gradle # Gradle 버전 명시
+        run: |
+          chmod +x ./gradlew
+          ./gradlew wrapper --gradle-version 8.2 --distribution-type=bin
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
