--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,9 @@ org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
 android.nonTransitiveRClass=false
+
+# Gradle이 네트워크 문제로 다운로드에 실패하는 경우, 미러 서버를 사용
+systemProp.gradle.wrapperUserAgent=Mozilla/5.0
+systemProp.http.keepAlive=false
+systemProp.https.keepAlive=false
+org.gradle.jvmargs=-XX:MaxHeapSize=512m -Xmx512m
