--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -26,6 +26,7 @@ jobs:
         run: rm -rf ~/.gradle/caches
 
       - name: Setup Gradle # Gradle 버전 명시
+        working directory: android # Gradle 실행 위치 설정
         run: |
           chmod +x android/gradlew
           android/gradlew wrapper --gradle-version 8.2 --distribution-type=bin
