안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  gradle hip size 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,7 @@ android {
             NMF_CLIENT_ID      : dotenv['NMF_CLIENT_ID'] ?: "",
             KAKAO_NATIVE_APP_KEY : dotenv['KAKAO_NATIVE_APP_KEY'] ?: ""
         ]
+        multiDexEnabled true
     }
     signingConfigs {
         release {
@@ -89,4 +90,5 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
