--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,4 +7,4 @@ android.nonTransitiveRClass=false
 systemProp.gradle.wrapperUserAgent=Mozilla/5.0
 systemProp.http.keepAlive=false
 systemProp.https.keepAlive=false
-org.gradle.jvmargs=-XX:MaxHeapSize=512m -Xmx512m
+org.gradle.jvmargs=-Xmx4096m
