안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  gradle working-directory 설정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -28,8 +28,8 @@ jobs:
       - name: Setup Gradle # Gradle 버전 명시
         working-directory: android # Gradle 실행 위치 설정
         run: |
-          chmod +x android/gradlew
-          android/gradlew wrapper --gradle-version 8.5 --distribution-type=bin
+          chmod +x gradlew
+          ./gradlew wrapper --gradle-version 8.5 --distribution-type=bin
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
