안드로이드 CICD 자동 빌드 배포 구현 필요 : feat :  flutter sdk 경로 명시 https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -28,6 +28,7 @@ jobs:
       - name: Create local.properties
         run: |
           echo "sdk.dir=$ANDROID_HOME" > android/local.properties
+          echo "flutter.sdk=$FLUTTER_HOME" >> android/local.properties
 
       - name: Setup Gradle # Gradle 버전 명시
         working-directory: android # Gradle 실행 위치 설정
