--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -15,6 +15,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Create .env file from GitHub Secret
+        run: |
+          printf "%s\n" "${{ secrets.ENV }}" > .env
+        working-directory: .
+
+      - name: Check .env file
+        run: ls -la .
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -44,7 +52,7 @@ jobs:
         working-directory: android # Gradle 실행 위치 설정
         run: |
           chmod +x gradlew
-          ./gradlew wrapper --gradle-version 8.5 --distribution-type=bin
+          ./gradlew wrapper --gradle-version 8.5 --distribution-type=bin --stacktrace
 
       - name: Set up Java
         uses: actions/setup-java@v3
