안드로이드 CICD 자동 빌드 배포 구현 필요 : feat : gradle 캐시 저장/복원 추가
https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -37,8 +37,15 @@ jobs:
           key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-flutter-pub-
 
-      - name: Clear Gradle Cache #Gradle 캐시 무효화
-        run: rm -rf ~/.gradle/caches
+      - name: Cache Gradle dependencies # Gradle 캐시 저장/복원 추가
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
       - name: Create local.properties
         run: |
@@ -61,7 +68,7 @@ jobs:
           java-version: "17"
 
       - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
