--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -8,3 +8,5 @@ systemProp.gradle.wrapperUserAgent=Mozilla/5.0
 systemProp.http.keepAlive=false
 systemProp.https.keepAlive=false
 org.gradle.jvmargs=-Xmx4096m
+# 빌드 캐시 활성화
+org.gradle.caching=true 
