안드로이드 CICD 자동 빌드 배포 구현 필요 : fix : Fastline 상대위치 path 조정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/16

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -99,8 +99,10 @@ jobs:
 
       - name: Build APK with Fastlane
         run: |
+          cd android
           fastlane build --verbose
-          ls -la ./build/app/outputs/flutter-apk/ # 디버깅용
+          ls -la ../build/app/outputs/flutter-apk/ # 루트 기준 경로로 디버깅
+        working-directory: .
 
       - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
