deploy시 파일 업로드 프로토콜 FTP SMB 로 변경 필요 : feat : cicd 작업 시 ftp -> smb 파일 전송 로직 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/28

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -135,6 +135,15 @@ jobs:
       - name: List downloaded structure (Debug)
         run: ls -alR android/app/build/outputs
 
+      - name: Find APK file
+        run: |
+          APK_FILE=$(find android/app/build/outputs/ -name "*.apk" | head -n 1)
+          echo "APK_FILE=$APK_FILE" >> $GITHUB_ENV
+
+          # 경로에서 파일명만 추출
+          APK_NAME=$(basename "$APK_FILE")
+          echo "APK_NAME=$APK_NAME" >> $GITHUB_ENV
+
       - name: Upload files to Synology NAS via SMB
         env:
           WEB_SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
